--- a/index.css
+++ b/index.css
@@ -130,6 +130,7 @@ li {
   grid-column: container-start / container-end;
 }
 
+/* ---------------- HEADER ----------------  */
 .header {
   background-color: var(--color-secondary);
   padding: var(--padding-d-m-v) var(--padding-d-l-h);
@@ -175,4 +176,91 @@ li {
 
 .header__nav--link:hover {
   color: var(--color-primary);
+}
+
+/* ---------------- HERO ----------------  */
+.hero {
+  height: 80vh;
+
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+
+  position: relative;
+}
+
+.hero__bg {
+  position: absolute;
+  top: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  height: 100%;
+  width: 90%;
+  z-index: -1;
+}
+
+.hero__bg img {
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+  filter: brightness(0.8);
+}
+
+.hero__content {
+  /* flex-basis: 50%; */
+
+  display: flex;
+  flex-direction: column;
+  gap: 3rem;
+}
+
+.hero__content--sub-title {
+  font-size: var(--font-size-st-sc);
+  color: var(--color-primary);
+}
+
+.hero__content--title {
+  font-size: var(--font-size-d-l);
+  color: var(--color-primary);
+  text-transform: uppercase;
+}
+
+.hero__content--links {
+  display: flex;
+  gap: 2rem;
+}
+
+.hero__content--links__view-listings,
+.hero__content--links__contact {
+  flex-basis: 30%;
+
+  padding: var(--padding-st-s-v) var(--padding-st-m-h);
+  border-radius: 1rem;
+  font-size: var(--font-size-st-sc);
+  text-align: center;
+  transition: all 0.25s ease-in-out;
+}
+
+.hero__content--links__view-listings {
+  border: 1px solid transparent;
+  background-color: var(--color-primary);
+  color: var(--color-secondary);
+}
+
+.hero__content--links__view-listings:hover {
+  border: 1px solid var(--color-primary);
+  background: none;
+  color: var(--color-primary);
+}
+
+.hero__content--links__contact {
+  border: 1px solid var(--color-primary);
+  background: none;
+  color: var(--color-primary);
+}
+
+.hero__content--links__contact:hover {
+  border: 1px solid transparent;
+  background-color: var(--color-primary);
+  color: var(--color-secondary);
 }
