--- a/index.css
+++ b/index.css
@@ -21,7 +21,7 @@
   --color-primary: hsl(0, 0%, 100%);
 
   --color-secondary: hsl(0, 0%, 11%);
-  --color-secondary-Op-40: hsla(0, 0%, 11%, 0.4);
+  --color-secondary-Op-40: hsla(0, 0%, 11%, 0.2);
 
   /* --color-tertiary: hsl(0, 0%, 17%);
   --color-quaternary: hsl(0, 1%, 50%); */
@@ -162,6 +162,8 @@ li {
   column-gap: 2rem;
 
   position: relative;
+
+  width: 100vw;
 }
 
 .header::after {
@@ -212,6 +214,10 @@ li {
 }
 
 .hero__bg {
+  background: linear-gradient(to bottom, var(--color-secondary), var(--color-secondary-Op-40)),
+    url(images/nyc-4.jpg);
+  background-size: cover;
+  background-position: center;
   position: absolute;
   top: 0;
   left: 50%;
@@ -219,6 +225,11 @@ li {
   height: 100%;
   width: 90%;
   z-index: -1;
+
+  /* background: linear-gradient(to bottom, var(--color-secondary), var(--color-secondary-Op-40)),
+    url(images/nyc-6.jpg);
+  background-size: cover;
+  background-position: center; */
 }
 
 .hero__bg img {
